--- a/app/globals.css
+++ b/app/globals.css
@@ -1,9 +1,13 @@
-@tailwind utilities;
 @import "tailwindcss";
+@tailwind utilities;
 
 :root {
-  --background: #ffffff;
+  --background:#FCF8F8;
   --foreground: #171717;
+
+  --wrap: 1440px;
+  --wrapspace: 30px;
+  --paddingTopBottom: 30px;
 }
 
 @theme inline {
@@ -20,8 +24,35 @@
   }
 }
 
+html,
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  height: 100%;
 }
+
+body {
+  background: var(--background);   
+  color: var(--foreground);
+  font-family: var(--font-manrope);
+  line-height: 1.5;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+ul,
+ol {
+  list-style: none;
+}
+
+button {
+  cursor: pointer;
+}
+
+.container {
+  max-width: calc(var(--wrap) + var(--wrapspace) * 2);
+  margin-inline: auto;
+  padding-inline: var(--wrapspace);
+}
+
