(ui): add footer ui & pixelLogo

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,7 +2,7 @@
 @tailwind utilities;
 
 :root {
-  --background:#FCF8F8;
+  --background: #ffffff;
   --foreground: #171717;
 
   --wrap: 1440px;
@@ -10,19 +10,19 @@
   --paddingTopBottom: 30px;
 }
 
-@theme inline {
+/* @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
-}
-
+} */
+/* 
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-}
+} */
 
 html,
 body {
@@ -55,4 +55,5 @@ button {
   margin-inline: auto;
   padding-inline: var(--wrapspace);
 }
+
 
