--- a/app/globals.css
+++ b/app/globals.css
@@ -10,6 +10,11 @@
   --paddingTopBottom: 30px;
 }
 
+.dark {
+  --background: #0a0a0a;
+  --foreground: #ededed;
+}
+
 /* @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
