--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,5 @@
 @import "tailwindcss";
-@tailwind utilities;
+/* @tailwind utilities; */
 
 :root {
   --background: #ffffff;
@@ -21,15 +21,10 @@ body {
 }
 
 body {
-  background: var(--background);   
+  background: var(--background);
   color: var(--foreground);
   font-family: var(--font-manrope);
   line-height: 1.5;
-}
-
-a {
-  text-decoration: none;
-  color: inherit;
 }
 
 ul,
@@ -46,4 +41,3 @@ button {
   margin-inline: auto;
   padding-inline: var(--wrapspace);
 }
-
