--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,8 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --border: #eeeef0;
+  --primary: #2563eb;
 
   --wrap: 1440px;
   --wrapspace: 30px;
@@ -13,6 +15,8 @@
 .dark {
   --background: #0a0a0a;
   --foreground: #ededed;
+  --border: #2a2a2a;
+  --primary: #1e40af;
 }
 
 html,
@@ -41,3 +45,10 @@ button {
   margin-inline: auto;
   padding-inline: var(--wrapspace);
 }
+
+.text-stroke {
+  color: transparent;
+  -webkit-text-stroke-width: 1.5px;
+  -webkit-text-stroke-color: var(--foreground);
+}
+
