--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,7 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --backgroundLight: #fafafa;
   --border: #eeeef0;
   --primary: #2563eb;
 
@@ -15,6 +16,7 @@
 .dark {
   --background: #0a0a0a;
   --foreground: #ededed;
+  --backgroundLight: #18181b;
   --border: #2a2a2a;
   --primary: #1e40af;
 }
